--- a/index.html
+++ b/index.html
@@ -67,14 +67,12 @@
 </div>
 </body>
 
-    <footer id="sticky-footer" class="py-4" style="background-color: white; margin-top: 400px;">
-        <div class="container text-center">
-            <small>
-                <a href= "./privacy_de.html" target="_blank" style="color:darkblue">Impressum, Disclaimer, Datenschutz (DE)</a><br>
-                <a href= "./privacy_en.html" target="_blank" style="color:darkblue">Impressum, Disclaimer, Privacy Policy (EN)</a>
-            </small>
-        </div>
-      </footer>
+<footer id="footer">
+    <small>
+        <a href= "./privacy_de.html" target="_blank">Impressum, Disclaimer, Datenschutz (DE)</a><br>
+        <a href= "./privacy_en.html" target="_blank">Impressum, Disclaimer, Privacy Policy (EN)</a>
+    </small>
+</footer>
 
 
 </html>
