--- a/pakistan.html
+++ b/pakistan.html
@@ -155,14 +155,12 @@
 </div>
 </body>
 
-<footer id="sticky-footer" class="py-4 text-white-50" style="background-color: #2E2E2E;">
-    <div class="container text-center">
-        <small>
-            <a href= "./privacy_de.html" target="_blank" style="color:whitesmoke">Impressum, Disclaimer, Datenschutz (DE)</a><br>
-            <a href= "./privacy_en.html" target="_blank" style="color:whitesmoke">Impressum, Disclaimer, Privacy Policy (EN)</a>
-        </small>
-    </div>
-  </footer>
+<footer id="footer">
+    <small>
+        <a href= "./privacy_de.html" target="_blank">Impressum, Disclaimer, Datenschutz (DE)</a><br>
+        <a href= "./privacy_en.html" target="_blank">Impressum, Disclaimer, Privacy Policy (EN)</a>
+    </small>
+</footer>
 
 
 
