--- a/photography.html
+++ b/photography.html
@@ -64,11 +64,11 @@
 
 </body>
 <footer id="footer">
-        <small>
-            <a href= "./privacy_de.html" target="_blank" style="color:whitesmoke">Impressum, Disclaimer, Datenschutz (DE)</a><br>
-            <a href= "./privacy_en.html" target="_blank" style="color:whitesmoke">Impressum, Disclaimer, Privacy Policy (EN)</a>
-        </small>
-  </footer>
+    <small>
+        <a href= "./privacy_de.html" target="_blank">Impressum, Disclaimer, Datenschutz (DE)</a><br>
+        <a href= "./privacy_en.html" target="_blank">Impressum, Disclaimer, Privacy Policy (EN)</a>
+    </small>
+</footer>
 
 
 </html>
