--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
 
 
 <!-- Analytics Technology Map-->
-<div class="container-fluid"  style="padding-top: 30px; padding-bottom: 30px; background-color: whitesmoke; border-bottom: 1px solid black;">   <!-- background-color: whitesmoke;-->
+<div class="container-fluid"  style="padding-top: 30px; padding-bottom: 30px; background-color: whitesmoke; border-top: 1px solid black;">   <!-- background-color: whitesmoke;-->
     <div class="row justify-content-center x">   <!--style="max-width: 800px;"-->
         <div class="col-xl-6 col-lg-7 col-md-8 col-xs-11 pb-1">
         <h4 class="project_header" >Analytics Technology Map</h4>
@@ -162,7 +162,7 @@
     <div class="row justify-content-center" style="padding-left:5px;">
         <div class="col-xl-6 col-lg-9 col-md-10 col-xs-11 pb-1">
             <h5>Current status</h5>
-            <p>  I used the <a href="https://pushshift.io/api-parameters/">pushlift API</a> to acess old reddit data.
+            <p>  I used the <a href="https://pushshift.io/api-parameters/" target="_blank">pushlift API</a> to acess old reddit data.
                 I chose to include posts and comments from subreddits "MachineLearning", "webdev", "bigdata", "datascience", "analytics" and "ArtificialInteligence". 
                 I decided to use data from the last 2 years, to get a somewhat recent view on things. I also decided only to include posts and 
                 comments that have as least as many likes as dislikes. This might be overcautious, since most of the time the comment
@@ -189,7 +189,7 @@ Presto on the other hand is straight up distributed SQL.
 
 
 <!-- My website-->
-<div class="container-fluid"  style="padding-top: 30px; background-color: white;">   <!-- background-color: whitesmoke;-->
+<div class="container-fluid"  style="padding-top: 30px; background-color: white; border-top: 1px solid black;">   <!-- background-color: whitesmoke;-->
     <div class="row justify-content-center x">   <!--style="max-width: 800px;"-->
         <div class="col-xl-6 col-lg-7 col-md-8 col-xs-11 pb-1">
         <h4 class="project_header" >My Website</h4><p>28.04.2020</p>
@@ -200,59 +200,23 @@ Presto on the other hand is straight up distributed SQL.
     <div class="row justify-content-center" style="padding-left:5px;">
         <div class="col-xl-6 col-lg-9 col-md-10 col-xs-11 pb-1">
             <h5>Description</h5>
-            <p>This actual website.
-            </p>            
-        </div>
-    </div>
-
-    <!-- Horizontal red line-->
-    <div class="container-fluid" style="padding-top:0px; padding-bottom:0px; margin-top: 0px; margin-bottom: 0px;">
-        <div class="row justify-content-center"">
-            <div class="col-lg-6 col-xs-8 pb-1" >
-                <hr style="border-top: 1px solid red;">
-            </div>
-            <div class="col-lg-4 "></div>
-        </div>
-    </div>
-
-    <!-- Approach-->
-    <div class="row justify-content-center" style="padding-left:5px;">
-        <div class="col-xl-6 col-lg-9 col-md-10 col-xs-11 pb-1">
-            <h5>Approach</h5>
-            <p>  HTML, Bootstrap
+            <p>I built this static website using mainly HTML and Bootstrap with just very little custom CSS. If I want to include a web app in the future
+                I will deploy a microservice and keep the static part constant. A very helpful resource to understand the Bootstrap 4 grid 
+                layout <a href="https://www.youtube.com/watch?v=qmPmwdshCMw" target="_blank">is this video on youtube</a>. All html and the css file of this website
+                can be found on my <a href="https://github.com/HannoMaximilian/website" target="_blank"></a>github repository.
             </p>            
         </div>
     </div>
 </div>
 
 
-    <div class="row justify-content-center">   <!--style="max-width: 800px;"-->
-        <div class="col-xl-2 col-lg-3 col-md-4 pb-5 ">
-            <p>
-                This is no1
-            </p>
-        </div>
-
-        <div class="col-xl-2 col-lg-3 col-md-4 pb-5">
-            <p>
-                this is no 2
-            </p>
-        </div>
-
-        <div class="col-xl-2 col-lg-3 col-md-4 pb-5">
-            <p>
-                this is no 3
-            </p>
-        </div>
-    </div>
-
 
 </body>
 
 <footer id="footer">
     <small>
-        <a href= "./privacy_de.html" target="_blank" style="color:whitesmoke">Impressum, Disclaimer, Datenschutz (DE)</a><br>
-        <a href= "./privacy_en.html" target="_blank" style="color:whitesmoke">Impressum, Disclaimer, Privacy Policy (EN)</a>
+        <a href= "./privacy_de.html" target="_blank">Impressum, Disclaimer, Datenschutz (DE)</a><br>
+        <a href= "./privacy_en.html" target="_blank">Impressum, Disclaimer, Privacy Policy (EN)</a>
     </small>
 </footer>
 
