--- a/pakistan.html
+++ b/pakistan.html
@@ -46,8 +46,10 @@
         <p>
             My travels to Pakistan took place in October 2019. My travels in Iran made me interested in the region, 
             and I ended up going to Pakistan after choosing between other countries. I chose to go to the North of Pakistan,
-            because of the beauty of the landscape and because of the good things that I heard about traveling there. Although the security situation
-            is very good, I felt there was a lot to explore. I didn't make very precise travel plans beforehand, and the itineary kind of evolved during 
+            because of the beauty of the landscape and because of the good things that I heard about traveling there. The security situation
+            in the North of Pakistan is very good, and I never felt unsafe walking around alone. There is so much to explore and to see,
+            and the people are extremely friendly.
+            I didn't make very precise travel plans beforehand, and the itineary kind of evolved during 
             the trip. It ended up being: Gilgit, Nanga Parbat, Karimabad and up the Karakoam Highway until Khunjerab Pass, Shimshal, Mount Rakaposhi, Deosai,
             Mastuj, Swat Valley, Peschawar, Lahore and Islamabad.
         </p>
@@ -74,13 +76,13 @@
     <div class="carousel-item">
         <img class="d-block w-100" src="img/pakistan/DSC_4468_1080.JPG" alt="Pakistan_1">
         <div class="carousel-caption d-none d-md-block">
-            <p>Men repairing the road on the way to the mountain Nanga Parbat<br> October 2019</p>
+            <p>Men repairing the road on the way to the mountain Nanga Parbat<br> &nbsp;</p>
         </div>
     </div>    
     <div class="carousel-item">
         <img class="d-block w-100" src="img/pakistan/DSC_4600_1080.JPG" alt="Pakistan_2">
         <div class="carousel-caption d-none d-md-block">
-            <p>Nanga Parbat early in the morning and it's reflection in a small puddle<br> &nbsp;</p>
+            <p>Nanga Parbat early in the morning and its reflection in a small puddle<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
@@ -104,7 +106,7 @@
     <div class="carousel-item">
         <img class="d-block w-100" src="img/pakistan/DSC_5311_1080.JPG" alt="Pakistan_6">
         <div class="carousel-caption d-none d-md-block">
-            <p>The setting sun luminates the clouds caught by the mountain range.<br> 
+            <p>The setting sun luminates the clouds caught in the mountain range.<br> 
                 Seen from the road connecting Hopar Valley with Karimabad</p>
         </div>
     </div>
