--- a/ethiopia.html
+++ b/ethiopia.html
@@ -75,7 +75,7 @@
     <div class="carousel-item active">
         <img class="d-block w-100" src="img/ethiopia/DSC_2551_1080.JPG" alt="Ethiopia_1">
         <div class="carousel-caption d-none d-md-block">
-            <p>Men having breakfast after attending church mass at a church close to Abiy Addi<br> October 2019</p>
+            <p>Men having breakfast after attending church mass at a church close to Abiy Addi<br>&nbsp; </p>
         </div>
     </div>    
     <div class="carousel-item">
@@ -111,7 +111,7 @@
     <div class="carousel-item">
         <img class="d-block w-100" src="img/ethiopia/DSC_1918_1080.JPG" alt="Ethiopia_7">
         <div class="carousel-caption d-none d-md-block">
-            <p>Monkey (baboo?) in Simien national park<br> &nbsp;</p>
+            <p>Galeda (bleeding-heart-monkey) in Simien national park<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
