--- a/iran.html
+++ b/iran.html
@@ -116,25 +116,25 @@
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/Iran/DSC_4888_1080.JPG" alt="Pakistan_10">
+        <img class="d-block w-100" src="img/Iran/DSC_4888_1080.JPG" alt="Iran_10">
         <div class="carousel-caption d-none d-md-block">
             <p>Yazd II <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/Iran/DSC_5019_1080.JPG" alt="Pakistan_11">
+        <img class="d-block w-100" src="img/Iran/DSC_5019_1080.JPG" alt="Iran_11">
         <div class="carousel-caption d-none d-md-block">
             <p>Morning sun illuminating the Nasir-ol-Molk Mosque in Shiraz<br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/Iran/DSC_5030_1080.JPG" alt="Pakistan_12">
+        <img class="d-block w-100" src="img/Iran/DSC_5030_1080.JPG" alt="Iran_12">
         <div class="carousel-caption d-none d-md-block">
             <p>Naqsh-e Rostam between Shiraz and Persepolis <br> &nbsp;</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="img/Iran/DSC_5351_1080.JPG" alt="Pakistan_12">
+        <img class="d-block w-100" src="img/Iran/DSC_5351_1080.JPG" alt="Iran_12">
         <div class="carousel-caption d-none d-md-block">
             <p>Train stop somewhere between Andimeshk and Dorud <br> &nbsp;</p>
         </div>
