Design and text changes

--- a/aboutme.html
+++ b/aboutme.html
@@ -51,8 +51,7 @@
             description of my professional life please visit my LinkedIn page:<br>
             <a href="https://www.linkedin.com/in/hannozang/" target="_blank">Hanno Zang on Linkedin</a>
         </p>
-        <p> The Photography that I do is merely a hobby during my travels. <br>
-            The projects that I do are just things that interest me.
+        <p> If you want to get in touch, feel free to contact me at: hanno(d0t)zang(at)gmx(d0t)net
         </p>
 </div>
 </div>
@@ -74,8 +73,8 @@
 
 <footer id="footer">
     <small>
-        <a href= "./privacy_de.html" target="_blank">Impressum, Disclaimer, Datenschutz (DE)</a><br>
-        <a href= "./privacy_en.html" target="_blank">Impressum, Disclaimer, Privacy Policy (EN)</a>
+        <a href= "./privacy_de.html" target="_blank" style="color:white;">Impressum, Disclaimer, Datenschutz (DE)</a><br>
+        <a href= "./privacy_en.html" target="_blank" style="color:white;">Impressum, Disclaimer, Privacy Policy (EN)</a>
     </small>
 </footer>
 
