--- a/ethiopia.html
+++ b/ethiopia.html
@@ -55,8 +55,6 @@
             but also very exciting. <br>
             The places I visited during my trip were Bahir Dar, Gonder, Simien National Park, Aksum, Abiy Addi, Hawzien, Lalibela, Awassa, Sodo, 
             Debre Zeyit, Harar and Addis Abeba. <br>
-            What I recall strongly in comparison to other countries I visited was how devided Ethiopia felt in different ways. The country is divided by religion
-            (mainly Christianity and Islam), by language (approximately 90 different languages spoken) and by ethonology (more than 80 ethnic groups).
         </p>
 </div>
 </div>
@@ -171,8 +169,8 @@
 
 <footer id="footer">
     <small>
-        <a href= "./privacy_de.html" target="_blank">Impressum, Disclaimer, Datenschutz (DE)</a><br>
-        <a href= "./privacy_en.html" target="_blank">Impressum, Disclaimer, Privacy Policy (EN)</a>
+        <a href= "./privacy_de.html" target="_blank" style="color:white;">Impressum, Disclaimer, Datenschutz (DE)</a><br>
+        <a href= "./privacy_en.html" target="_blank" style="color:white;">Impressum, Disclaimer, Privacy Policy (EN)</a>
     </small>
 </footer>
 
