--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
                 to share my travel experiences. If you have any specific questions about places I visited that I can help you with feel free to get in touch. 
                 The pictures were all taken by me, and I generally don't want anybody to use or distribute the pictures in any way. If you should be interested in 
                 the rights to use any of the pictures, please get in touch.<br>
-                The projects that I am going to share on my website are projects I am working on privately. I will probably create content while I am persuing the projects
-                so don't be surprised to see unfinished work. I don't think that I will publish anything I have worked on in the past (before creating this website).
-                While the Photography part of my webpage will have content right from the beginning, the Projects part is going to start quite empty and evolve over time.
+                The projects that I am going to share on my website are projects I am working on privately. I will create content continiously while I am persuing 
+                the projects so don't be surprised to see unfinished work. I don't think that I will publish anything I have worked on in the past 
+                (before creating this website). While the Photography part of my webpage will have content right from the beginning, 
+                the Projects part is going to start quite empty and evolve over time.
             </p>
 </div>
 </div>
@@ -69,8 +70,8 @@
 
 <footer id="footer">
     <small>
-        <a href= "./privacy_de.html" target="_blank">Impressum, Disclaimer, Datenschutz (DE)</a><br>
-        <a href= "./privacy_en.html" target="_blank">Impressum, Disclaimer, Privacy Policy (EN)</a>
+        <a href= "./privacy_de.html" target="_blank" style="color:white;">Impressum, Disclaimer, Datenschutz (DE)</a><br>
+        <a href= "./privacy_en.html" target="_blank" style="color:white;">Impressum, Disclaimer, Privacy Policy (EN)</a>
     </small>
 </footer>
 
