--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
 <!-- Description-->
 <div class="container-fluid"  style="padding-top: 30px;">   <!-- background-color: whitesmoke;-->
     <div class="row justify-content-center">   <!--style="max-width: 800px;"-->
-    <div class="col-xl-7 col-lg-9 col-md-10 col-xs-11  pb-5">
+    <div class="col-xl-9 col-sm-10 col-xs-11  pb-5">
         <h2 class="display-5">Projects</h1>
         <p>
             This is a place where I will present projects that I am persuing privately.<br>
@@ -58,7 +58,7 @@
 <!-- Analytics Technology Map-->
 <div class="container-fluid"  style="padding-top: 30px; padding-bottom: 30px; background-color: whitesmoke; border-top: 1px solid black;">   <!-- background-color: whitesmoke;-->
     <div class="row justify-content-center x">   <!--style="max-width: 800px;"-->
-        <div class="col-xl-6 col-lg-7 col-md-8 col-xs-11 pb-1">
+        <div class="col-xl-8  col-sm-9 col-xs-11 pb-1">
         <h3 class="project_header" >Analytics Technology Map</h3>
         <p>28.04.2020</p>
         <a href="https://github.com/HannoMaximilian/AnalyticsTechnologyMap" target="_blank">Github Repository of project</a>
@@ -67,7 +67,7 @@
 
     <!-- Desciption-->
     <div class="row justify-content-center" style="padding-left:5px;">
-        <div class="col-xl-6 col-lg-9 col-md-10 col-xs-11 pb-1">
+        <div class="col-xl-8  col-sm-9 col-xs-11 pb-1">
             <h4>Description</h4>
             <p>The goal of this project is to create a map of technologies that are related to Data Analytics. This includes 
                 database technolgies, data processing technologies and data visualization tools. I hope to gather some insight into how Technologies are used in the real world, 
@@ -78,7 +78,8 @@
                 each other in the vector space. Here is a basic description of how a typical <a href="https://pathmind.com/wiki/word2vec">algorithm for word embeddings</a> works.
                 I originally got the idea when working at a consultancy where we programmed an Artificial Intelligence that would make suggestions
                  on which consultant should be staffed on a given project.
-                In order to generate suggestions, I mapped all available consultants in a high dimensional vectorspace. I then mapped each project in
+                In order to generate suggestions, we mapped all available consultants in a high dimensional vectorspace. The vector of each individual
+                consultant was dependent on their CV and the Skills that they possessed. We then generated a vector for each consulting project in
                 the same vectorspace and calculated the consultants that were closest. (This is a simplified version of how the final product worked).
 
             </p>            
@@ -97,9 +98,9 @@
 
     <!-- Approach-->
     <div class="row justify-content-center" style="padding-left:5px;">
-        <div class="col-xl-6 col-lg-9 col-md-10 col-xs-11 pb-1">
+        <div class="col-xl-8  col-sm-9 col-xs-11 pb-1">
             <h4>First Version</h4>
-            <div style="padding-left: 10px;">
+            <div style="padding-left: 20px;">
                 <h5>Approach</h5>
                 <p style="font-weight: bold; margin-top: 10px; margin-bottom: 0px;">Data</p>
                 <p style="margin-top: 0px; margin-bottom: 0px;">
@@ -151,7 +152,7 @@
     <!-- Horizontal red line-->
     <div class="container-fluid" style="padding-top:0px; padding-bottom:0px; margin-top: 0px; margin-bottom: 0px;">
         <div class="row justify-content-center"">
-            <div class="col-lg-4 col-xs-6 pb-1" >
+            <div class="col-lg-5 col-xs-7 pb-1" >
                 <hr style="border-top: 1px solid blue;">
             </div>
             <div class="col-lg-4 "></div>
@@ -160,10 +161,10 @@
 
     <!-- Current status-->
     <div class="row justify-content-center" style="padding-left:5px;">
-        <div class="col-xl-6 col-lg-9 col-md-10 col-xs-11 pb-1">
-            <div style="padding-left: 10px;">
+        <div class="col-xl-8  col-sm-9 col-xs-11 pb-1">
+            <div style="padding-left: 20px;">
             <h5>Current status</h5>
-            <p>  I used the <a href="https://pushshift.io/api-parameters/" target="_blank">pushlift API</a> to acess old reddit data.
+            <p> I used the <a href="https://pushshift.io/api-parameters/" target="_blank">pushlift API</a> to acess old reddit data.
                 I chose to include posts and comments from subreddits "MachineLearning", "webdev", "bigdata", "datascience", "analytics" and "ArtificialInteligence". 
                 I decided to use data from the last 2 years, to get a somewhat recent view on things. I also decided only to include posts and 
                 comments that have as least as many likes as dislikes. This might be overcautious, since most of the time the comment
@@ -194,16 +195,16 @@
 <!-- My website-->
 <div class="container-fluid"  style="padding-top: 30px; background-color: white; border-top: 1px solid black;">   <!-- background-color: whitesmoke;-->
     <div class="row justify-content-center x">   <!--style="max-width: 800px;"-->
-        <div class="col-xl-6 col-lg-7 col-md-8 col-xs-11 pb-1">
+        <div class="col-xl-8  col-sm-9 col-xs-11 pb-1">
         <h3 class="project_header" >My Website</h3>
         <p>28.04.2020</p>
-        <a href="https://github.com/HannoMaximilian/website">Github Repository</a>
+        <a href="https://github.com/HannoMaximilian/website" target="_blank">Github Repository</a>
         </div>
     </div>
     
     <!-- Desciption-->
     <div class="row justify-content-center" style="padding-left:5px; padding-bottom: 150px;">
-        <div class="col-xl-6 col-lg-9 col-md-10 col-xs-11 pb-1">
+        <div class="col-xl-8  col-sm-9 col-xs-11 pb-1">
             <h5>Description</h5>
             <p>I built this static website using mainly HTML and Bootstrap with just very little custom CSS. If I want to include a web app in the future
                 I will deploy a microservice and keep the static part constant. A very helpful resource to understand the Bootstrap 4 grid 
@@ -220,8 +221,8 @@
 
 <footer id="footer">
     <small>
-        <a href= "./privacy_de.html" target="_blank">Impressum, Disclaimer, Datenschutz (DE)</a><br>
-        <a href= "./privacy_en.html" target="_blank">Impressum, Disclaimer, Privacy Policy (EN)</a>
+        <a href= "./privacy_de.html" target="_blank" style="color:white;">Impressum, Disclaimer, Datenschutz (DE)</a><br>
+        <a href= "./privacy_en.html" target="_blank" style="color:white;">Impressum, Disclaimer, Privacy Policy (EN)</a>
     </small>
 </footer>
 
