--- a/iran.html
+++ b/iran.html
@@ -160,8 +160,8 @@
 
 <footer id="footer">
     <small>
-        <a href= "./privacy_de.html" target="_blank">Impressum, Disclaimer, Datenschutz (DE)</a><br>
-        <a href= "./privacy_en.html" target="_blank">Impressum, Disclaimer, Privacy Policy (EN)</a>
+        <a href= "./privacy_de.html" target="_blank" style="color:white;">Impressum, Disclaimer, Datenschutz (DE)</a><br>
+        <a href= "./privacy_en.html" target="_blank" style="color:white;">Impressum, Disclaimer, Privacy Policy (EN)</a>
     </small>
 </footer>
 
